[tool.poetry]
name = "dashcam_dump"
version = "0.1.0"
description = "wait for sdcard, identify from dash cam, dump card, erase video"
authors = ["James Delancey <jamesdelanceyjr@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
